@@ -1,5 +1,10 @@
 2007-11-29  Mike Kestner  <mkestner@novell.com>
 
+	* parser/gapi_pp.pl: collapse embedded multiline function fields 
+	to a single line.  [Fixes #344853]
+
+2007-11-29  Mike Kestner  <mkestner@novell.com>
+
 	* generator/MethodBase.cs: move Name stuff from subclasses.
 	Check for (G|S)et<UpperCaseLetter> in new Has props.
 	* generator/Method.cs:
